--- a/web/htdocs/wp-content/languages/ja.po
+++ b/web/htdocs/wp-content/languages/ja.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WordPress - 5.7.x - Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2021-04-20 23:32:04+0000\n"
+"PO-Revision-Date: 2021-05-07 15:19:27+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6101,7 +6101,7 @@ msgstr "%s という権限グループは存在しません。"
 
 #: wp-includes/rest-api/endpoints/class-wp-rest-users-controller.php:889
 msgid "Invalid user ID for reassignment."
-msgstr "配置転換のユーザー ID が無効です。"
+msgstr "再割り当て用のユーザー ID が無効です。"
 
 #: wp-includes/rest-api/endpoints/class-wp-rest-users-controller.php:839
 msgid "Sorry, you are not allowed to delete this user."
